--- a/client/src/components/Portfolio/style.css
+++ b/client/src/components/Portfolio/style.css
@@ -28,6 +28,8 @@
 }
 .t0c{
   margin-left: 30px;
+  font-size: smaller;
+  padding: 3px 0px 3px 0px;
 }
 #portfolioSiteDiv p {
   margin: 15px 15px 15px 15px;
